--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,11 @@
 AbstractUserDetailsAuthenticationProvider.badCredentials= The username or password you entered is incorrect.
+
+typeMismatch.java.lang.Integer = {0} muse be an Integer
+NotNull = {0} must have a value
+NotEmpty = {0} field can not be empty
+Email = Invalid email address
+Size = {0} must be between {2} and {1}
+
+
+firstName = First Name
+lastName = Last Name
