appointments if logged in

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,6 @@ Size = {0} must be between {2} and {1}
 
 firstName = First Name
 lastName = Last Name
+userName = User Name
+password = Password
+verifyPassword = Verify Password
